[package]
name = "librivox_streamer"
version = "0.1.1"
edition = "2021"

[lib]
name = "librivox_streamer"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.94"
bytemuck = "1.20.0"
flume = "0.11.1"
pyo3 = "0.22.0"
rand = "0.8.5"
symphonia = { version = "0.5.4", features=["mp3"] }
ureq = "3.0.0-rc2"
